--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,17 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.example.houshuai.copy360antivirus.UI.Activity.MainActivity">
     <!--主界面Acivity    候帅做-->
     <android.support.design.widget.AppBarLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        >
 
 
-
-        ></android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>
 
 
 
